--- a/ExtensionTest.html
+++ b/ExtensionTest.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Extension Test</title>
+	<title>Extract Text from DOM</title>
+	<meta charset="UTF-8">
 </head>
 <body>
-  <script src="getDOM.js"></script>
+	<div>
+		<h1>Example Title</h1>
+		<p>Here is some example text to extract.</p>
+		<ul>
+			<li>List item 1</li>
+			<li>List item 2</li>
+			<li>List item 3</li>
+		</ul>
+	</div>
+	<script src="extractTextFromDOM.js"></script>
 </body>
 </html>
