--- a/InteractionWithDOM/ExtensionTest.html
+++ b/InteractionWithDOM/ExtensionTest.html
@@ -14,6 +14,6 @@
 			<li>List item 3</li>
 		</ul>
 	</div>
-	<script src="extractTextFromDOM.js"></script>
+	<script src="getDOMText.js"></script>
 </body>
 </html>
