--- a/InteractionWithDOM/ExtensionTest.html
+++ b/InteractionWithDOM/ExtensionTest.html
@@ -8,12 +8,13 @@
 	<div>
 		<h1>Example Title</h1>
 		<p>Here is some example text to extract.</p>
+        <p>This is another paragraph to extract.</p>
 		<ul>
 			<li>List item 1</li>
 			<li>List item 2</li>
 			<li>List item 3</li>
 		</ul>
 	</div>
-	<script src="getDOMText.js"></script>
+	<script src="processedDOM.js"></script>
 </body>
 </html>
